alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,13 @@ h1 {
   width: 100%;
   margin-top: 20px;
 }
-.boardForm {
+.center {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
+}
+
+.boardBtn {
+  justify-content: center;
 }
